# trends-autocomplete-poc

./: .gitmodules  Cargo.toml  Rocket.toml  build.rs  package-lock.json  package.json  tsconfig.json
src/: data.rs  error.rs  fairings.rs  main.rs  schema.rs  util.rs
www/: index.html
www/components/: search-bar.js  search-bar.ts
www/styles/: main.css
